<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mba2dna.depannini.AjoutOffre" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#ffffff" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:background="#ffffff"
            android:padding="5dp" >

            <TextView
                android:id="@+id/explicationtxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/titre1"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:text="@string/vous_ete_un_artisan_et_vous_cherchez_un_emploi_inscrivez_vous_maintenant_" />

            <TextView
                android:id="@+id/titre1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="18dp"
                android:text="@string/inscription_d_panini_gratuitement" />

            <EditText
                android:id="@+id/nom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/explicationtxt"
                android:layout_below="@+id/explicationtxt"
                android:layout_marginTop="15dp"
                android:textColor="@color/colorPrimary"
                android:ems="10"
                android:hint="@string/nom"
                android:inputType="textPersonName" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/prenom"
                android:layout_below="@+id/prenom"
                android:layout_marginTop="14dp"
                android:textColor="@color/colorPrimary"
                android:ems="10"
                android:hint="@string/_213_000_000_000"
                android:inputType="phone" />

            <MultiAutoCompleteTextView
                android:id="@+id/AdrTxt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/phone"
                android:layout_below="@id/phone"
                android:ems="9"
                android:hint="@string/votre_addresse_ici_"
                android:paddingRight="37dp"
                android:textColor="@color/colorPrimary"
                android:completionThreshold="1"
                android:singleLine="true" >
            </MultiAutoCompleteTextView>



            <ImageView
                android:id="@+id/SearchBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/AdrTxt"
                android:layout_alignRight="@id/AdrTxt"
                android:layout_alignTop="@id/AdrTxt"
                android:contentDescription="@string/searchTxt"
                android:padding="5dp"
                android:src="@drawable/ic_crosshairs_gps_white_24dp"
                android:tint="@color/colorPrimary"/>

            <LinearLayout
                android:id="@+id/mapAdrcontener"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/AdrTxt"
                android:orientation="vertical" >

                <com.google.android.gms.maps.MapView
                    android:id="@+id/mapAdr"
                    android:layout_width="match_parent"
                    android:layout_height="250dip"
                    android:background="#ffffff" >
                </com.google.android.gms.maps.MapView>
            </LinearLayout>

            <TextView
                android:id="@+id/SpecialiteTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/mapAdrcontener"
                android:layout_marginTop="19dp"
                android:paddingLeft="7dp"
                android:text="@string/sp_cialit_"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Spinner
                android:id="@+id/sprinnerSpecialiter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/SpecialiteTxt"
                android:layout_marginTop="5dp" />

            <com.rey.material.widget.Button
                style="@style/Material.Drawable.Ripple.Touch.MatchView"
                android:id="@+id/inscriptionBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:minHeight="38dp"
                android:layout_below="@+id/sprinnerSpecialiter"
                android:text="@string/inscrivez_vous_maintenant"
                android:textColor="@color/colorPrimary"
                app:rd_enable="true"
                />
            <EditText
                android:id="@+id/prenom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/nom"
                android:layout_below="@+id/nom"
                android:layout_marginTop="14dp"
                android:textColor="@color/colorPrimary"
                android:ems="10"
                android:hint="@string/prenom"
                android:inputType="textPersonName" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
