<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mba2dna.wechkhassek.activity.SignupActivity"
    >

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />
    <!-- LOGO -->


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/dirlogo"
        android:layout_width="102dp"
        android:layout_height="102dp"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_dslr_camera_icon"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="18dp"
        app:border_width="2dp"
        app:border_color="@color/colorAccent"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dirlogo"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">


    <com.rey.material.widget.EditText
            style="@style/Material.Widget.EditText.Light"
            android:id="@+id/usernamefield"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
            android:ems="12"
            android:hint="@string/usernamhint"
            android:paddingTop="8dp"
            app:et_dividerColor="@color/colorPrimary"
            app:et_inputId="@+id/textfield_et_label_input"
            app:et_supportMode="none"
            android:textSize="14sp"

            />

        <com.rey.material.widget.EditText
            style="@style/Material.Widget.EditText.Light"
            android:id="@+id/EmailTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
            android:ems="12"
            android:hint="@string/EmailHint"
            android:inputType="textEmailAddress"
            app:et_dividerColor="@color/colorPrimary"
            app:et_inputId="@+id/textfield_et_label_input"
            android:paddingTop="8dp"
            app:et_supportMode="none"
            android:textSize="14sp"
            />

        <com.rey.material.widget.EditText
            style="@style/Material.Widget.EditText.Light"
            android:id="@+id/passTxt1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
            android:ems="12"
            android:hint="@string/PassHint"
            android:inputType="textPassword"
            android:paddingTop="8dp"
            app:et_dividerColor="@color/colorPrimary"
            app:et_inputId="@+id/textfield_et_label_input"
            app:et_supportMode="none"
            android:textSize="14sp"
            />

        <com.rey.material.widget.EditText
            style="@style/Material.Widget.EditText.Light"
            android:id="@+id/passTxt2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
            android:ems="12"
            android:paddingTop="8dp"
            android:hint="@string/PassHint"
            android:inputType="textPassword"
            app:et_dividerColor="@color/colorPrimary"
            app:et_inputId="@+id/textfield_et_label_input"
            app:et_supportMode="none"
            android:textSize="14sp"
             />

        <com.rey.material.widget.Button
            style="@style/Material.Drawable.Ripple.Touch.MatchView"
            android:id="@+id/SignUpBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:minHeight="38dp"
            android:text="@string/SignUpBtnTxt"
            android:textColor="@color/colorPrimary"
            app:rd_enable="true"
             />
        <TextView
            android:id="@+id/Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/loginUpBtnTxt"
            android:gravity="center" />
    </LinearLayout>


    <TextView
        android:id="@+id/Dinaninielabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/Dipaninilabel"
        android:textSize="12sp" />

</RelativeLayout>
