<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.mba2dna.wechkhassek.activity.LoginActivity">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"  />
        <!-- LOGO -->
        <ImageView
            android:id="@+id/dirlogo"
            android:layout_below="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/hello_world"
            android:src="@drawable/ic_logo_with_text" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dirlogo"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">
    <com.rey.material.widget.EditText
        style="@style/Material.Widget.EditText.Light"
        android:id="@+id/UsernameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
        android:hint="@string/EmailHint"
        android:inputType="textEmailAddress"
        android:ems="10"
        app:et_labelTextColor="@color/grey2"
        app:et_dividerColor="@color/colorPrimary"
        app:et_inputId="@+id/textfield_et_label_input"
        app:et_supportMode="none"
/>
    <com.rey.material.widget.EditText
        style="@style/Material.Widget.EditText.Light"
        android:id="@+id/PasswordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
        android:ems="10"
        android:hint="@string/PassHint"
        android:inputType="textPassword"
        app:et_dividerColor="@color/colorPrimary"
        app:et_inputId="@+id/textfield_et_label_input"
        app:et_supportMode="none"
 />

    <com.rey.material.widget.Button
        style="@style/Material.Drawable.Ripple.Touch.MatchView"
        android:id="@+id/LoginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@color/colorAccent"
        android:minHeight="38dp"
        android:text="@string/loginBtnTxt"
        android:textColor="@color/colorPrimary"
        app:rd_enable="true"
 />




        <TextView
            android:id="@+id/ou"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/ou"
            android:textSize="12sp" />
       <!-- <com.google.android.gms.common.SignInButton
            android:id="@+id/btn_sign_in"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ou"
            android:gravity="center" />-->
           <!--<com.facebook.widget.LoginButton
             android:id="@+id/authButton"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/btn_sign_in"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="5dp" />-->
        <!--<com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.rey.material.widget.Button
                style="@style/Material.Drawable.Ripple.Touch.MatchView"
                android:id="@+id/butt1"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".32"
                android:background="#3b5998"
                android:minHeight="38dp"
                android:text="facebook"
                android:textColor="#fff"
                app:rd_enable="true"
                />
            <com.rey.material.widget.Button
                style="@style/Material.Drawable.Ripple.Touch.MatchView"
                android:id="@+id/googlelogin"
                android:layout_width="0dp"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:layout_height="wrap_content"
                android:layout_weight=".32"
                android:background="#dd4b39"
                android:minHeight="38dp"
                android:text="Google +"
                android:textColor="#fff"
                app:rd_enable="true"
                />
            <com.rey.material.widget.Button
                style="@style/Material.Drawable.Ripple.Touch.MatchView"
                android:id="@+id/butt3"
                android:layout_width="0dp"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:layout_height="wrap_content"
                android:layout_weight=".32"
                android:background="#007bb6"
                android:minHeight="38dp"
                android:text="Linkedin"
                android:textColor="#fff"
                app:rd_enable="true"
                />
            </LinearLayout>
        <TextView
            android:id="@+id/Signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/enregistrerTxt"
            android:gravity="center" />
    </LinearLayout>
    <TextView
        android:id="@+id/Dinaninielabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/Dipaninilabel"
        android:textSize="12sp" />
</RelativeLayout>
